@@ -79,6 +79,7 @@ V6.00 (xx.xx.2020)
  - fixes to package js.colordomain & more params to new variation vortex, fixes to package js.colordomain, more params to new variation vortex, by Jesus Sosa
  - removed the (barely understood) "Mirror translations"-button at the Affine-transforms-tab
  - fixed a bug preventing changing parameters "Blur fade" and "Blur falloff" on the "DOF/Bokeh -> Post blur" -tab
+ - fixed a bug regarding calculating the wrong pixels-per-unit-setting when importing a flame from the thumbnail-ribbon
 
 V5.60 (06.05.2020)
  - new commandline-tool to create and render random flames.
